plugins {
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'org.springframework.boot' version '2.7.0'
	id 'maven-publish'
}


subprojects {
	apply plugin: 'java-library'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'maven-publish'

	group = 'com.epam.resource-service'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = JavaVersion.VERSION_11
	targetCompatibility = JavaVersion.VERSION_11

	repositories {
		mavenCentral()
		mavenLocal()
	}

	dependencies {
		compileOnly 'org.projectlombok:lombok:1.18.24'
		annotationProcessor 'org.projectlombok:lombok:1.18.24'

		testCompileOnly 'org.projectlombok:lombok:1.18.24'
		testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'

		implementation 'org.springframework.boot:spring-boot-starter-web'

		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}

springBoot {
	mainClass = 'com.epam.resourceservice.ResourceServiceApplication'
}
